<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUs"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#fff" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/WhatourAppdo"
       android:textSize="22sp"
       android:id="@+id/ourApp"
       android:layout_below="@+id/mToolbar"
       android:layout_centerHorizontal="true"
       android:layout_margin="10sp"
       android:textColor="#000"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mClose"
        android:layout_below="@+id/ourApp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mAboutUsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/version"
                android:padding="13dp"
                android:text="@string/content"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/mRateOurApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mAboutUsContent"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:text="@string/rateApp"
                android:textColor="#000"
                tools:ignore="UnknownId" />

            <RatingBar
                android:id="@+id/rateApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mRateOurApp"
                android:layout_centerInParent="true"
                android:numStars="5"
                android:rating="3.5" />

            <android.support.v7.widget.CardView
                android:id="@+id/mBuyVersion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/rateApp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                app:cardBackgroundColor="#ee054901"
                app:cardCornerRadius="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/buyNow"
                    android:textColor="#fff"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="55dp"
                    android:layout_marginRight="35dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_buy_pro_version" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/mShare"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/mBuyVersion"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#ee94201d"
                app:cardCornerRadius="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/share"
                    android:textColor="#fff"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="55dp"
                    android:layout_marginRight="35dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_share" />


            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/mClose"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>