<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/black"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@null"
                android:src="@drawable/slate_black" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/white"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@null"
                android:src="@drawable/slate_white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/green"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@null"
                android:src="@drawable/slate_green" />

        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>